LU-2109 osp: Tell more when unable to cancel log records

This is to debug LU-2109, but I think it may be useful to be landed to
master.

Change-Id: I7b487271608eb7ecbd9869c6e44643a463f08416
Signed-off-by: Li Wei <wei.g.li@intel.com>
Revision-Id: 1

Conflicts:

	lustre/osp/osp_sync.c