lustre/osp/osp_sync.c
@@ -710,8 +710,15 @@ static void osp_sync_process_committed(const struct lu_env *env,
 						     &body->oa.o_lcookie);
 			if (rc)
 				DEBUG_REQ(D_ERROR, req,
-				          "%s: can't cancel record: %d\n",
-				          obd->obd_name, rc);
+					  "%s: can't cancel record "
+					  LPX64":"LPX64":%u:%u:%u: %d\n",
+					  obd->obd_name,
+					  body->oa.o_lcookie.lgc_lgl.lgl_oid,
+					  body->oa.o_lcookie.lgc_lgl.lgl_oseq,
+					  body->oa.o_lcookie.lgc_lgl.lgl_ogen,
+					  body->oa.o_lcookie.lgc_subsys,
+					  body->oa.o_lcookie.lgc_index,
+					  rc);
 		} else {
 			DEBUG_REQ(D_HA, req, "not committed");
 		}
